--- a/src/components/body-parts-tab/body-parts-tab.styles.scss
+++ b/src/components/body-parts-tab/body-parts-tab.styles.scss
@@ -2,3 +2,166 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.eyesButton {
+    width: 70px;
+    height: 70px;
+    background-size: 500%;
+    background-position: -123px -97px;
+    border: 3px solid black;
+    background-color: white;
+    margin: 8px;
+    cursor: pointer;
+  }
+  
+.browsButton {
+    width: 70px;
+    height: 70px;
+    background-size: 500%;
+    background-position: -123px -85px;
+    background-color: white;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .mouthButton {
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    background-size: 550%;
+    background-position: -135px -145px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+  }
+  .handsButton {
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    background-size: 190%;
+    background-position: -145px -45px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+  }
+  .legsButton {
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    background-size: 190%;
+    background-position: -145px -80px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+  }
+  .clothesButton {
+    width: 70px;
+    height: 90px;
+    background-size: 170%;
+    background-position: -127px -40px;
+    background-color: white;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+  }
+  .boobsButton {
+    width: 70px;
+    height: 70px;
+    background-size: 250%;
+    background-position: -200px -70px;
+    background-color: white;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .hairButton {
+    width: 70px;
+    height: 70px;
+    background-size:280%;
+    background-color: white;
+    background-position: -53px -45px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .beardsButton {
+    width: 70px;
+    height: 70px;
+    background-size:280%;
+    background-color: white;
+    background-position: -53px -45px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .glassesButton {
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    background-size:280%;
+    background-position: -53px -45px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .masksButton {
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    background-size:280%;
+    background-position: -53px -45px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hatsButton {
+    width: 70px;
+    height: 70px;
+    background-size:280%;
+    background-color: white;
+    background-position: -53px -45px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mouthsButton {
+    width: 70px;
+    height: 70px;
+    background-size: 550%;
+    background-position: -135px -145px;
+    border: 3px solid black;
+    margin: 8px;
+    cursor: pointer;
+  }
+
+  .title {
+      text-align: center;
+      margin: 15px 0 0 0;
+  }
