--- a/src/components/character-editor-panel/character-editor-panel.styles.scss
+++ b/src/components/character-editor-panel/character-editor-panel.styles.scss
@@ -1,14 +1,25 @@
 .editor-panel {
     height:600px;
-    width: 350px;
+    width: 370px;
     background-color: white;
     border: 5px solid black;
     
     top: 80px;
     right: 40px;
     z-index: 7;
-    background-color: green;
+    
 
     
 }
+.tab {
+    padding-left: 8px;
+}
 
+.scrollbox {
+    z-index: 1;
+    overflow: scroll;
+    width: 100%;
+    max-height: 94%;
+   
+  }
+  
