--- a/src/components/body-parts-tab/body-parts-tab.styles.scss
+++ b/src/components/body-parts-tab/body-parts-tab.styles.scss
@@ -165,3 +165,15 @@
       text-align: center;
       margin: 15px 0 0 0;
   }
+
+  .slider-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+    .slider {
+        width: 95%;
+        cursor: pointer;
+    }
+  }
