--- a/src/components/control-panel/control-panel.styles.scss
+++ b/src/components/control-panel/control-panel.styles.scss
@@ -1,10 +1,13 @@
 .control-panel {
     height: 40px;
-    margin: 0 auto;
     width: 170px;
+    top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: space-between;
     position: absolute;
-    left: 35%;
     z-index: 9999;
 }
