--- a/src/components/warning-screen/warning-screen.styles.scss
+++ b/src/components/warning-screen/warning-screen.styles.scss
@@ -5,4 +5,34 @@
     width: 100vw;
     height: 95vh;
     background-color: rgba(0, 0, 0, 0.432);
+
+    .warning-container {
+        background-color: white;
+        width: 300px;
+        height: 200px;
+        padding: 20px;
+        margin: 200px auto;
+    }
+
+    .buttons-container {
+        display: flex;
+        justify-content: space-around;
+
+        button {
+            width: 100px;
+            height: 30px;
+            font-size: 18px;
+            background-color: black;
+            color: white;
+            border-radius: 0;
+            border: none;
+        }
+    }
+
+    .warning-text {
+        font-size: 20px;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+
 }
