--- a/src/components/characters-list/characters-list.styles.scss
+++ b/src/components/characters-list/characters-list.styles.scss
@@ -21,3 +21,26 @@
         margin-bottom: 10px;
     }
 }
+
+.characters-list-creator {
+    height: 70px;
+    width: 430px;
+    border: 5px solid black;
+    display: flex;
+    
+    
+
+    .editor-button{
+        width: 50px;
+        height: 50px;
+        background-size:280%;
+        background-position: -35px -30px;
+        border: 3px solid black;
+        margin: 5px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+    }
+}
