--- a/src/components/common/body-part.styles.scss
+++ b/src/components/common/body-part.styles.scss
@@ -3,3 +3,11 @@
     top:0;
     left: 0;
 }
+
+.body-part-scene {
+    margin-top: 40px;
+    width: 350px;
+    position: absolute;
+    top:0;
+    left: 0;
+}
