--- a/src/components/scene/scene.styles.scss
+++ b/src/components/scene/scene.styles.scss
@@ -4,5 +4,7 @@
     margin-left: 20px;
     margin-top: 30px;
     background-repeat: no-repeat;
-    background-size: 100% 100%;;
+    background-size: 100% 100%;
+    overflow: hidden;
+    position: relative;
 }
