--- a/src/components/game/game-field.scss
+++ b/src/components/game/game-field.scss
@@ -12,46 +12,20 @@
         margin-top: 30px;
 
        .char-and-scenes-list {
-           position: absolute;
-           top: -45px;
-           margin-left: auto;
+            position: absolute;
+            width: 950px;
+            top: -45px;
+            margin-left: auto;
             margin-right: auto;
             left: 0;
             right: 0;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
 
        }
        
     }
-    .buttons {
-        width: 950px;
-        margin: 0 auto;
-
-        .button-container {
-            width: 100%;
-            display: flex;
-            justify-content: flex-start;
-            padding: 10px;
     
-            .button {
-                min-width: 30px;
-                width: auto;
-                height: 20px;
-                padding: 0 10px;
-                font-size: 15px;
-                background-color: black;
-                color: white;
-                border: none;
-                cursor: pointer;
-                display: flex;
-                justify-content: center;
-                text-align: center;
-                
-    
-            }
-        }
-    }
     
     
 }
@@ -63,29 +37,60 @@
     margin-top: 10px;
 
     label {
-        text-align: right;
-        clear: both;
-        float:left;
-        margin-right:15px;
     }
 
     .slider {
-        width: 700px;
+        width: 300px;
+        margin-left: 15px;
+        margin-right: 30px;
     }
 }
 .text-input-container {
-    width: 900px;
+    width: 300px;
+    height: 50px;
     display: flex;
-    margin: 0 auto;
+
     margin-top: 10px;
 
-    label {
-        text-align: right;
-        clear: both;
-        float:left;
-        margin-right:15px;
-    }
     .text {
         width: 700px;
+    }
+}
+
+.controls {
+    display: flex;
+    width: 950px;
+    margin:  0 auto;
+}
+
+.controls-on-scene {
+    width: 70%
+}
+
+.buttons {
+    margin-right: 70px;
+
+    .button-container {
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        padding: 10px;
+
+        .button {
+            min-width: 30px;
+            width: auto;
+            height: 20px;
+            padding: 0 10px;
+            font-size: 15px;
+            background-color: black;
+            color: white;
+            border: none;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            
+
+        }
     }
 }
