--- a/src/components/game/game-field.scss
+++ b/src/components/game/game-field.scss
@@ -24,10 +24,11 @@
 
        }
        
-    }
-    
-    
-    
+    }   
+}
+
+.scene-container {
+    margin-top: 40px;
 }
 
 .scene-slider-container {
