--- a/src/components/scene/scene.styles.scss
+++ b/src/components/scene/scene.styles.scss
@@ -5,4 +5,8 @@
     background-size: 100% 100%;
     overflow: hidden;
     position: relative;
+
+    @media only screen and (max-width: 900px) {
+        width: 800px; 
+    }
 }
