--- a/src/components/warning-screen/warning-screen.styles.scss
+++ b/src/components/warning-screen/warning-screen.styles.scss
@@ -5,7 +5,7 @@
     width: 100vw;
     height: 95vh;
     background-color: rgba(0, 0, 0, 0.432);
-    z-index: 999999;
+    z-index: 9999999999;
 
     .warning-container {
         background-color: white;
