--- a/src/components/game/game-field.scss
+++ b/src/components/game/game-field.scss
@@ -55,17 +55,20 @@
     }
 }
 .text-input-container {
-    width: 330px;
+    width: 420px;
     height: 50px;
     display: flex;
-    margin-right: 40px;
+    margin-right: 10px;
     margin-top: 10px;
     @media only screen and (max-width: 900px) {
         width: 200px;
     }
+    .options-container{
+        width:90px;
+    }
 
     .text {
-        width: 700px;
+        width: 300px;
     }
 }
 
@@ -83,7 +86,7 @@
 }
 
 .buttons {
-    margin-right: 70px;
+    margin-right: 20px;
 
     @media only screen and (max-width: 900px) {
         margin-right: 5px;
@@ -156,4 +159,8 @@
     text-align: center;
     text-decoration: none;
     margin-top: 10px;
+}
+
+.mini-backgrounds {
+    width: 100px;
 }
