--- a/src/components/loading-screen/loading-screen.scss
+++ b/src/components/loading-screen/loading-screen.scss
@@ -44,6 +44,12 @@
         border: 3px solid black;
         cursor: pointer;
       }
+
+      .loading {
+        position: absolute;
+        top: 70%;
+        left: 40%;
+      }
       
   
   }
