--- a/src/components/character-on-scene/char-on-scene.styles.scss
+++ b/src/components/character-on-scene/char-on-scene.styles.scss
@@ -8,7 +8,8 @@
     top: 20px;
     left: 30px;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .pointer {
